--- a/README
+++ b/README
@@ -2,6 +2,10 @@
 
 Pour compiler ce projet vous aurez besoin de l'utilitaire cmake qui permet de générer des makefile.
 
+# Prerequis:
+- cmake
+- libgtk-3-dev
+
 à partir du répertoire principal, effectuer les commandes : 
 
 mkdir build
@@ -13,5 +17,3 @@ Vos executables ont été généré:
     build/src/main -> En mode Graphique
     build/src/terminal -> En mode Terminal
 
-# CI: linked
-on commit
